# EV-Bax

./: LICENSE  README.md  environment.yml  pyproject.toml
src/ev-bax/: data_handler.py  execution_handler.py  portfolio.py  strategy.py
src/ev-bax/event/: event.py  fill_event.py  market_event.py  order_event.py  signal_event.py
