[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Nicolai Banke", email = "nicolaibanke@hotmail.com"}]
name = "ev-bax"
version = "1.0.0"
requires-python = "==3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
